# packument

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
__test__/__snapshots__/: index.spec.ts.snap
__test__/fixtures/: a.json  obug.json  swagger-spec-express.json
benchmark/: bench.ts
src/: js_package.rs  lib.rs  package.rs
