
[package]
authors = ["MK <fengmk2@gmail.com>"]
edition = "2021"
name = "packument"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
rustc-hash = "2.1.1"
self_cell = "1.2.1"
simd-json = "0.17.0"
sonic-rs = "0.5.6"
tracing = "0.1.41"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
